Fixed display du menu et image avec z-index

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -297,17 +297,20 @@ a { text-decoration: none; }
 /*-- PAGES MENU --*/
 
 .resto {
-    width: 100%; height: fit-content;
+    width: 100%; height: 13.5rem;
+    position: relative;
 
     &__img {
         width: 100%;
-        height: 17rem;
+        height: 16rem;
+        position: absolute;
         object-fit: cover;
     }
 }
 
 .menu { 
     width: 100%;
+    position: relative; z-index: 1;
     border-top-right-radius: 40px;
     border-top-left-radius: 40px;
     background-color: $background-gray;
@@ -467,7 +470,7 @@ a { text-decoration: none; }
             padding: 3rem 15%; 
             
             .heading {
-                font-size: 2.5rem;
+                font-size: 2rem;
             }
         }
 
